eks-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-aura-api-service
  labels:
    app.kubernetes.io/name: dev-aura-api
spec:
  selector:
    app.kubernetes.io/name: dev-aura-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
