eks-dev/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana-dev.auradental.vn
      secretName: dev-kibana-kb-http-ca-public
  rules:
    - host: kibana-dev.auradental.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-kibana-kb-http
                port:
                  number: 5601
