eks-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-aura-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api-dev.auradental.vn"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dev-aura-api-service
                port:
                  number: 80
